Changing z-index in header to help with mobile menu issues

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ header {
   display: grid;
   grid-template: repeat(4, auto) / repeat(12, 1fr);
   row-gap: 1em;
+  z-index: 5;
   column-gap: 0.75em;
   margin-top: 1em;
   margin-bottom: 2em;
@@ -165,7 +166,6 @@ main {
   grid-row: 1 / 2;
   grid-column: 1 / 13;
   justify-self: center;
-  z-index: -1;
 }
 
 .intro {
@@ -231,7 +231,6 @@ main {
   margin: 2em auto;
   max-width: 300px;
   line-height: 1.5;
-  z-index: -1;
 }
 
 .quick-links {
@@ -241,7 +240,6 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: -1;
 }
 
 .quick-link {
